--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="carousel-caption text-start">
               <h1>Example headline.</h1>
               <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-              <p><a class="btn btn-lg btn-primary" href="https://ist.dlmu.edu.cn/">Learn More</a></p>
+              <p><a class="btn btn-lg btn-primary" href="https://github.com/DMU-ITREC">GitHub</a></p>
             </div>
           </div>
         </div>
